@@ -1,1 +1,1 @@
-currentVersion=3.2.1.1
+currentVersion=3.2.1.2
