@@ -3,4 +3,4 @@ araneaframework.status=milestone
 version.stage=3
 version.milestone=2
 version.submilestone=1
-version.version=1
+version.version=2
